--- a/app/template/header.html
+++ b/app/template/header.html
@@ -97,7 +97,25 @@
 
 					<div class="catalog">
 						<ul class="catalog__list">
-							<li class="catalog__item"><a href="#" class="catalog__link">Протеин</a></li>
+							<li class="catalog__item">
+								<a href="#" class="catalog__link">Протеин</a>
+								<ul class="menu_lvl">
+									<span class="menu__title">Протеин</span>
+
+									<li class="catalog__item"><a href="#" class="catalog__link">L-карнитин</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Ацетил-L-карнитин</a>
+									</li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Йохимбин</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Антицеллюлитный крем</a>
+									</li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Для женщин</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Для мужчин</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">CLA</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Комплексные
+											жиросжигатели</a></li>
+
+								</ul>
+							</li>
 							<li class="catalog__item"><a href="#" class="catalog__link">Аминокислоты</a></li>
 							<li class="catalog__item"><a href="#" class="catalog__link">Гейнеры</a></li>
 							<li class="catalog__item"><a href="#" class="catalog__link">Витамины и минералы</a></li>
@@ -133,7 +151,25 @@
 							<li class="catalog__item"><a href="#" class="catalog__link">Энергетики</a></li>
 							<li class="catalog__item"><a href="#" class="catalog__link">Мышечная масса</a></li>
 							<li class="catalog__item"><a href="#" class="catalog__link">Спец. препараты</a></li>
-							<li class="catalog__item"><a href="#" class="catalog__link">Ферменты</a></li>
+							<li class="catalog__item">
+								<a href="#" class="catalog__link">Ферменты</a>
+								<ul class="menu_lvl">
+									<span class="menu__title">Ферменты</span>
+
+									<li class="catalog__item"><a href="#" class="catalog__link">L-карнитин</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Ацетил-L-карнитин</a>
+									</li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Йохимбин</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Антицеллюлитный крем</a>
+									</li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Для женщин</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Для мужчин</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">CLA</a></li>
+									<li class="catalog__item"><a href="#" class="catalog__link">Комплексные
+											жиросжигатели</a></li>
+
+								</ul>
+							</li>
 						</ul>
 					</div>
 				</div>
