--- a/app/sass/partials/_catalog.scss
+++ b/app/sass/partials/_catalog.scss
@@ -15,7 +15,12 @@
     padding-bottom: 10px;
     opacity: 0;
     pointer-events: none;
-    transition: 0.5s ease-in-out;
+    transition: 0.4s ease-in-out;
+
+    &.hover {
+        opacity: 1;
+        pointer-events: all;
+    }
 
     &:before {
         content: '';
@@ -30,7 +35,7 @@
 
     .catalog__item {
         
-        max-width: 270px;
+        max-width: 276px;
     }
 }
 
@@ -50,9 +55,23 @@
                 display: none;
             }
         }
+
+        .menu_lvl {
+
+            .catalog__link {
+                
+                &::before {
+                    display: block;
+                }
+            }
+        }
     }
 
-    
+    &:hover {
+         .menu_lvl {
+            display: block;
+        }
+    }
 
     .catalog__link {
         position: relative;
@@ -66,9 +85,7 @@
             background: #F8F8F8;
             color: #D65959;
 
-            &~ .menu_lvl {
-                display: block;
-            }
+           
             
         }
 
