--- a/app/template/footer.html
+++ b/app/template/footer.html
@@ -7,5 +7,6 @@
 <script src="https://code.jquery.com/jquery-3.4.0.min.js"
   integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
 <script src="libs/slick/slick.min.js"></script>
+<script src="libs/custom_scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="libs/mask/jquery.mask.min.js"></script>
 <script src="js/main.js"></script>
