--- a/app/template/head.html
+++ b/app/template/head.html
@@ -3,5 +3,6 @@
 	<title>BCAA</title>
 	<link rel="stylesheet" href="css/main.min.css">
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="js/slick/slick.css">
+	<link rel="stylesheet" href="libs/slick/slick.css">
+	<link rel="stylesheet" href="libs/custom_scrollbar/jquery.mCustomScrollbar.css">
 </head>
