--- a/app/sass/partials/_settings.scss
+++ b/app/sass/partials/_settings.scss
@@ -102,7 +102,6 @@ img {
 	font-size: 16px;
 	padding: 0 18px;
 	border: 1px solid #E0E0E0;
-	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
 	border-radius: 5px;
 	appearance: none;
 
@@ -114,9 +113,6 @@ img {
 	}
 
 	&:focus {
-		&::placeholder {
-			opacity:0;
-		}
 
 		&+ .name {
 			opacity: 1;
@@ -335,24 +331,32 @@ img {
 		display: block;
 		width: 100%;
 
+		&:hover {
+
+			&::after {
+				background: url(../img/arrow_down_blue.svg) center no-repeat;
+			}
+		}
+
         &::after {
 			content: "";
 			position: absolute;
 			top: 7px;
-			right: 2px;
+			right: 1px;
 			display: inline-block;
-			width: 12px;
-			height: 6px;
+			width: 14px;
+			height: 7px;
 			margin-left: 9px;
-			background: url(../img/arrow_down.svg) center no-repeat;       
+			background: url(../img/arrow_down.svg) center no-repeat;  
+			transition: 0.2s ease-in-out;        
         }
     }
 
     .language__list {
         display: none;
 		position: absolute;
-		top: -10px;
-    	right: -7px;
+		top: -14px;
+		right: -16px;	
 		z-index: 2;
 		width: 73px;
 		padding: 14px;
@@ -363,11 +367,11 @@ img {
 		&::after {
 			content: "";
 			position: absolute;
-			top: 19px;
-			right: 13px;
+			top: 21px;
+			right: 17px;
 			display: inline-block;
-			width: 12px;
-			height: 6px;
+			width: 14px;
+			height: 7px;	
 			background: url(../img/arrow_down.svg) center no-repeat;;                
         }
 	}	
