--- a/app/sass/partials/_header.scss
+++ b/app/sass/partials/_header.scss
@@ -197,7 +197,7 @@
             content: '';
             position: absolute;
             bottom: 10px;
-            right: 3px;
+            right: 0;
             display: block;
             width: 16px;
             height: 16px;
