--- a/app/sass/partials/_header.scss
+++ b/app/sass/partials/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    position: relative;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.05);
 }
 
@@ -27,6 +28,10 @@
         margin-right: 35px;
         transition: 0.2s ease-in-out;
 
+        @media (max-width: 1440px) {
+            margin-right: 15px;
+        }
+
         &:hover {
             color: #408dd5;
         }
@@ -44,6 +49,13 @@
     padding-bottom: 16px;
     font-size: 15px;
 
+    @media (max-width: 1240px) {
+        font-size: 12px;
+    }
+    @media (max-width: 1023px) {
+        display: none;
+    }
+
     .header__dropdown_wr {
         display: flex;
     }
@@ -55,6 +67,10 @@
         margin-right: 54px;
         cursor: pointer;
         transition: 0.2s ease-in-out;
+
+        @media (max-width: 1440px) {
+            margin-right: 15px;
+        }
 
         &:hover {
 
@@ -104,11 +120,21 @@
     justify-content: space-between;
     align-items: flex-end;
 
+    @media (max-width: 1023px) {
+        align-items: center;
+    }
+
     .logo {
         width: 140px;
         height: 39px;
         margin-right: 31px;
         margin-bottom: 14px; 
+
+        @media (max-width: 1023px) {
+            width: 108px;
+            height: 22px;
+            margin: 0;
+        }
     }
 
     .header__catalog_btn {
@@ -124,6 +150,10 @@
         border-radius: 5px 5px 0px 0px;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
         cursor: pointer;
+
+        @media (max-width: 1023px) {
+            display: none;
+        }
 
         &:hover {
             
@@ -173,7 +203,17 @@
         flex-grow: 1;
         margin-bottom: 22px;
         margin-right: 50px;
-        // transition: 0.3s ease-in-out;
+
+        @media (max-width: 1023px) {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            margin: 0;
+            padding: 0 20px;
+            padding-bottom: 20px;
+            background: #fff;
+        }
 
         &.focus {
             background: #FFFFFF;
@@ -184,8 +224,19 @@
             padding-left: 30px;
             padding-right: 30px;
 
+            @media (max-width: 1023px) {
+                box-shadow: none;
+                padding: 0 20px;
+                padding-bottom: 20px;
+                margin: 0;
+            }
+
             &:before { 
                 right: 30px;
+
+                @media (max-width: 1023px) {
+                   right: 20px;
+                }
             }   
 
             .input--search {
@@ -202,6 +253,11 @@
             width: 16px;
             height: 16px;
             background: url(../img/magnifying.svg) center no-repeat;
+
+            @media (max-width: 1023px) {
+                bottom: 29px;
+                right: 20px;
+            }
         }
 
         .input--search {
@@ -222,7 +278,11 @@
             pointer-events: none;
             transition: 0.3s ease-in-out;
             
+            @media (max-width: 1023px) {
+                padding: 0 20px 20px 20px;
+            }
             &.focus {
+                z-index: 2;
                 opacity: 1;
                 pointer-events: all;
             }
@@ -288,11 +348,14 @@
             align-items: center;
             width: 70px;
             height: 70px;
-            
             background: #FFFFFF;
             box-shadow: 0px -4px 20px rgba(0, 0, 0, 0.05);
             border-radius: 5px 5px 0px 0px;
 
+            @media (max-width: 1023px) {
+                box-shadow: none;
+                width: 45px;
+            }
 
             path {
 
@@ -331,6 +394,229 @@
             text-align: center;
             text-transform: uppercase;
             color: #FFFFFF;
+
+            @media (max-width: 1023px) {
+                right: 0;
+            }
+        }
+    }
+}
+
+.header__left {
+    display: flex;
+    align-items: center;
+}
+
+.menu_toggle {
+    width: 31px;
+    height: 21px;
+    display: none;
+    margin-right: 30px;
+    transform: rotate(0deg);
+    transition: .5s ease-in-out;
+    cursor: pointer;
+
+    @media (max-width: 1023px) {
+    	display: block;
+    }
+
+
+
+    span {
+	    display: block;
+	    position: absolute;
+	    height: 3px;
+	    width: 100%;
+	    background: #404040;
+	    border-radius: 100px;
+	    opacity: 1;
+	    left: 0;
+	    transform: rotate(0deg);
+	    transition: .25s ease-in-out;
+
+	    &:first-child {
+    		top: 0;
+		}
+
+		&:nth-child(2) {
+    		top: 9px;
+		}
+
+		&:nth-child(3) {
+    		top: 9px;
+		}
+
+		&:nth-child(4) {
+    		top: 18px;
+		}
+	}
+
+	&.open span:nth-child(1) {
+	  top: 18px;
+	  width: 0%;
+	  left: 50%;
+	}
+
+	&.open span:nth-child(2) {
+	  -webkit-transform: rotate(45deg);
+	  -moz-transform: rotate(45deg);
+	  -o-transform: rotate(45deg);
+	  transform: rotate(45deg);
+	}
+
+	&.open span:nth-child(3) {
+	  -webkit-transform: rotate(-45deg);
+	  -moz-transform: rotate(-45deg);
+	  -o-transform: rotate(-45deg);
+	  transform: rotate(-45deg);
+	}
+
+	&.open span:nth-child(4) {
+	  top: 18px;
+	  width: 0%;
+	  left: 50%;
+	}
+}
+
+.mobile_menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    display: none;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform: translateX(-100%);
+    transition: 0.5s ease-in-out;
+    background: #fff;
+
+    @media (max-width: 1023px) {
+        display: block;
+    }
+
+    &.open {
+        transform: translateX(0);
+    }
+
+    .menu__nav {
+
+        .menu__top {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-top: 64px;
+            padding-left: 30px;
+            padding-right: 28px;
+
+            .menu_toggle {
+                margin-right: 32px;
+            }
+        }
+
+        .menu__language {
+            font-size: 18px;
+            color: #616161;
+
+            .active {
+                color: #C4C4C4;
+            }
+
+            a {
+                &:first-child {
+                    margin-right: 19px;
+                    padding-right: 19px;
+                    border-right: 1px solid #D9D9D9;
+                }
+            }
+        }
+
+        .catalog__list {
+            padding-top: 25px;
+        }
+
+        .catalog__link {
+            padding-top: 11px;
+            padding-bottom: 11px;
+            padding-left: 36px;
+            font-size: 18px;
+            font-weight: 500;
+
+            &:not(.with_arrow) {
+
+                &:after {
+                    display: none;                
+                }
+            }
+
+            
+        }
+    }
+
+    .menu__contacts {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding-left: 39px;
+        padding-right: 55px;
+        padding-top: 30px;
+
+        .menu__contacts_link {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+            font-size: 22px;
+
+            &.phone {
+
+                &::before {
+                    content: '';
+                    display: block;
+                    width: 19px;
+                    height: 18px;
+                    margin-right: 11px;
+                    background: url(../img/phone.svg) center no-repeat;
+                    background-size: cover;
+                }
+            }
+
+            &.kyivstar {
+
+                &::before {
+                    content: '';
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    margin-right: 7px;
+                    background: url(../img/kyivstar.svg) center no-repeat;
+                    background-size: cover;
+                }
+            }
+            &.lifecell {
+
+                &::before {
+                    content: '';
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    margin-right: 7px;
+                    background: url(../img/lifecell.svg) center no-repeat;
+                    background-size: cover;
+                }
+            }
+            &.vodafone {
+
+                &::before {
+                    content: '';
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    margin-right: 7px;
+                    background: url(../img/vodafone.svg) center no-repeat;
+                    background-size: cover;
+                }
+            }
         }
     }
 }
