--- a/app/sass/partials/_header.scss
+++ b/app/sass/partials/_header.scss
@@ -510,14 +510,27 @@
             padding-left: 30px;
             padding-right: 28px;
 
+            @media (max-width: 479px) {
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+
             .menu_toggle {
                 margin-right: 32px;
+
+                @media (max-width: 479px) {
+                    margin-right: 20px;
+                }
             }
         }
 
         .menu__language {
             font-size: 18px;
             color: #616161;
+
+            @media (max-width: 479px) {
+                font-size: 16px;
+            }
 
             .active {
                 color: #C4C4C4;
@@ -528,12 +541,20 @@
                     margin-right: 19px;
                     padding-right: 19px;
                     border-right: 1px solid #D9D9D9;
+
+                    @media (max-width: 479px) {
+                        margin-right: 10px;
+                        padding-right: 10px;
+                    }
                 }
             }
         }
 
         .catalog__list {
             padding-top: 25px;
+        }
+        .catalog__item {
+            padding-right: 0
         }
 
         .catalog__link {
@@ -542,6 +563,12 @@
             padding-left: 36px;
             font-size: 18px;
             font-weight: 500;
+            
+            @media (max-width: 479px) {
+                padding-left: 20px;
+                padding-right: 20px;
+                font-size: 16px;
+            }
 
             &:not(.with_arrow) {
 
@@ -550,9 +577,98 @@
                 }
             }
 
+            &:after {
+                right: 30px;
+                
+
+                @media (max-width: 479px) {
+                    right: 20px;
+                }
+            }
+
+            &:before {
+                left: 36px;
+
+                @media (max-width: 479px) {
+                    left: 20px;
+                }
+            }
+        }
+
+        .menu_lvl {
+            width: 100%;
+            height: 100%;
+            border: 0;
+            padding-top: 0;
             
+            &.show {
+                display: block;
+                left: 0;
+                top: 0;
+                z-index: 1;
+            }
+
+            .menu_back {
+                position: relative;
+                margin-bottom: 0;
+                padding: 27px 79px;
+                text-align: center;
+                font-size: 22px;
+                text-transform: uppercase;
+                color: #767676;
+                box-shadow: 0 2px 19px rgba(0,0,0,.05);
+                cursor: pointer;
+    
+                &::before {
+                    content: '';
+                    position: absolute;
+                    left: 32px;
+                    top: 50%;
+                    width: 35px;
+                    height: 14px;
+                    transform: translateY(-50%);
+                    background: url(../img/arrow_back.svg) center no-repeat;
+
+                    @media (max-width: 479px) {
+                        left: 20px;
+                    }
+                }
+            }
+
+            .catalog__link  {
+                padding-left: 30px;
+
+                @media (max-width: 479px) {
+                    padding-left: 20px;
+                    padding-right: 20px;
+                }
+
+                &:before {
+                    left: 30px;
+
+                    @media (max-width: 479px) {
+                        left: 20px;
+                    }
+                }
+            }
+        }
+
+        .menu__subtitle {
+            display: block;
+            margin-top: 22px;
+            margin-bottom: 14px;
+            font-size: 18px;
+            color: #404040;
+            font-weight: 500;
+            padding-left: 30px;
+
+            @media (max-width: 479px) {
+                padding-left: 20px;
+            }
         }
     }
+
+    
 
     .menu__contacts {
         display: flex;
@@ -562,11 +678,20 @@
         padding-right: 55px;
         padding-top: 30px;
 
+        @media (max-width: 479px) {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
         .menu__contacts_link {
             display: flex;
             align-items: center;
             margin-bottom: 20px;
             font-size: 22px;
+
+            @media (max-width: 479px) {
+                font-size: 18px;
+            }
 
             &.phone {
 
